# stingray

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.bat  build.sh  build_msvc.bat  cli
src/: camera.cpp  camera.h  hittable.h  main.cpp  material.cpp  material.h  scene.cpp  scene.h  sphere.cpp  sphere.h
src/math/: sray_math.h
src/utility/: perfTimer.h
stingray-cli/: CMakeLists.txt
stingray-cli/src/: hittable.h  main.cpp  material.cpp  material.h  sphere.cpp  sphere.h
stingray-cli/src/math/: sray_math.h
stingray-cli/src/utility/: perfTimer.cpp
stingray-gui/: CMakeLists.txt
stingray-gui/assets/models/: cube.gltf  multimeshtest.gltf  plane.gltf  sofa.gltf  sphere.gltf  statue.gltf  test_scene.blend  test_scene.blend1  test_scene.gltf
stingray-gui/assets/shaders/: accumulation.ps.hlsl  fullscreen_tri.ps.hlsl  fullscreen_tri.vs.hlsl  gbuffer.ps.hlsl  gbuffer.vs.hlsl  globals.hlsl  hello.ps.hlsl  hello.vs.hlsl  raytracing.hlsl  raytracing_math.hlsl  raytracing_types.hlsl  rtao.hlsl  simple_shadows.vs.hlsl  text.ps.hlsl  text.vs.hlsl  ui.ps.hlsl  ui.vs.hlsl
stingray-gui/src/: main.cpp
stingray-gui/src/core/: application.cpp  application.hpp  camera.cpp  camera.hpp  enum_flags.hpp  frame_info.hpp  settings.hpp  utilities.cpp  utilities.hpp  window.hpp  window_base.hpp
stingray-gui/src/data/: entity.hpp  font.cpp  font.hpp  model.hpp  scene.cpp  scene.hpp
stingray-gui/src/input/: input.hpp  keycode.hpp  mousebutton.hpp  rawinput.cpp  rawinput.hpp
stingray-gui/src/input/windows/: input_win32.cpp
stingray-gui/src/managers/: asset_manager.cpp  asset_manager.hpp
stingray-gui/src/math/: quat.hpp  sr_math.hpp
stingray-gui/src/rendering/: device.hpp  graphics.hpp  render_graph.cpp  render_graph.hpp
stingray-gui/src/rendering/dx12/: d3dx12.h  device_dx12.cpp  device_dx12.hpp  graphics_dx12.hpp
stingray-gui/src/rendering/renderpasses/: accumulation_pass.cpp  accumulation_pass.hpp  csm_pass.cpp  csm_pass.hpp  fullscreen_tri_pass.cpp  fullscreen_tri_pass.hpp  gbuffer_pass.cpp  gbuffer_pass.hpp  ray_tracing_pass.cpp  ray_tracing_pass.hpp  rtao_pass.cpp  rtao_pass.hpp  simple_shadow_pass.cpp  simple_shadow_pass.hpp  ui_pass.cpp  ui_pass.hpp
stingray-gui/src/ui/: ui_event.cpp  ui_event.hpp
stingray-gui/src/windows/: window_win32.cpp  window_win32.hpp
